--- a/homePage/home.css
+++ b/homePage/home.css
@@ -1,5 +1,21 @@
 body{
     font-family: "Lexend Giga", sans-serif;
+    font-size: 20px;
+}
+
+li{
+    list-style: none;
+}
+
+.nav-login{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 100;
+    background-color: rgb(255, 255, 255, 0.5);
+    color: #131C63;
+    
 }
 
 .container-header-img{
@@ -27,4 +43,8 @@ body{
 
     color: #FFF;
     font-weight: bolder;
+}
+
+.nav-footer{
+    background-color: #131C63;
 }
