--- a/view/edicaoUsuario/editarPaciente.css
+++ b/view/edicaoUsuario/editarPaciente.css
@@ -1,3 +1,12 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    font-size: 20px;
+}
+
 main {
     display: flex;
     flex-direction: column;
@@ -12,12 +21,27 @@ h1{
 
 form {
     width: 100%;
-    max-width: 600px;
+    max-width: 50%;
     padding: 20px;
     border-radius: 8px;
+}
+
+label{
+    font-weight: bold;
+}
+
+input{
+    padding: 10px;
+    border: 2px solid #47639C;
+    border-radius: 10px;
 }
 
 .botao{
     background-color: #47639C;
     color: #fff;
+}
+
+div.mb-3{
+    display: flex;
+    flex-direction: column;
 }
