--- a/PHP/view/homePage/home.css
+++ b/PHP/view/homePage/home.css
@@ -21,10 +21,11 @@ header{
     justify-content: center;
 
     height: 450px;
-    color: #47639C;
+    color: #542f16;
 }
 
 .titulo{
+    color: #542f16;
     font-size: 60px;
     font-weight: bolder;
 
@@ -32,7 +33,7 @@ header{
 }
 
 .container-nav{
-    background-color: #47639C;
+    background-color: #e4ccbe;
 
     color: #FFF;
     font-weight: bolder;
