--- a/API/src/views/index.ejs
+++ b/API/src/views/index.ejs
@@ -10,7 +10,8 @@
     <ul>
         <li><a href="/administradores">Lista de Administradores</a></li>
         <li><a href="/novoadministrador">Inserir Administrador</a></li>
-        
+        <li><a href="/conteudos">Inserir Administrador</a></li>
+        <li><a href="/novoconteudo">Inserir Administrador</a></li>
     </ul>
 </body>
 </html>
