identando e consertando ejs para testes da API

--- a/API/src/views/index.ejs
+++ b/API/src/views/index.ejs
@@ -10,8 +10,10 @@
     <ul>
         <li><a href="/administradores">Lista de Administradores</a></li>
         <li><a href="/novoadministrador">Inserir Administrador</a></li>
-        <li><a href="/conteudos">Inserir Administrador</a></li>
-        <li><a href="/novoconteudo">Inserir Administrador</a></li>
+        <li><a href="/conteudos">Lista de Conteúdos</a></li>
+        <li><a href="/novoconteudo">Inserir Conteúdo</a></li>
+        <li><a href="/pacientes">Lista de Pacientes</a></li>
+        <li><a href="/novopaciente">Inserir Paciente</a></li>
     </ul>
 </body>
 </html>
